# vcml-cci

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: asan.yml  cmake.yml  coverage.yml  lint.yml  nightly.yml  style.yml
include/: vcml-cci.h
include/vcml/cci/: broker.h  types.h
include/vcml/models/generic/: model.h
src/vcml/cci/: broker.cpp  version.h.in
src/vcml/models/generic/: model.cpp  model_version.h.in
test/: CMakeLists.txt  model.cpp  testing.cpp  testing.h
test/unit/: CMakeLists.txt  broker.cpp
utils/: format  setup-clang  setup-gcc
